--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,14 @@
 <header class="site-header">
+  <div class="wrapper">
+    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a><br>
+
+    <div class="site-slogan">
+      {{ site.slogan }}
+    </div>
+  </div>
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -14,11 +20,21 @@
       </a>
 
       <div class="trigger">
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
-        {% endfor %}
+          <a class="page-link" href="/deer_hunting/">Deer Hunting</a>
+          <a class="page-link" href="/elk_hunts/">Elk Hunts</a>
+          <a class="page-link" href="/pack_trips/">Pack Trips</a>
+          <a class="page-link" href="/snowmobiling/">Snowmobiling</a>
+          <a class="page-link" href="/trail_rides/">Trail Rides</a>
+      </div>
+      <div class="trigger">
+          <a class="page-link" href="/photo_gallery/">Photo Gallery</a>
+          <a class="page-link" href="/dates_of_hunts/">Dates of Hunts</a>
+          <a class="page-link" href="/hunting_gear/">Hunting Gear</a>
+          <a class="page-link" href="/map/">Map</a>
+          <a class="page-link" href="/prices/">Prices</a>
+          <a class="page-link" href="/about/">About</a>
+          <a class="page-link" href="/brochure/">Brochure</a>
+          <a class="page-link" href="/contact_us/">Contact Us</a>
       </div>
     </nav>
 
