--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,23 +4,33 @@
 .site-header {
     border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
-    min-height: 56px;
-
+    min-height: 400px;
+    background-image: url(/images/tetons.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
     // Positioning context for the mobile navigation icon
     position: relative;
+    @include media-query($on-palm) {
+      background-image: url(/images/tetons_small.jpg);
+    }
 }
 
 .site-title {
-    font-size: 26px;
+    font-size: 46px;
     line-height: 56px;
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
+    color: #FFF;
 
     &,
     &:visited {
-        color: $grey-color-dark;
+        color: #FFF;
     }
+    @include media-query($on-palm) {
+      font-size: 26px;
+    }
+
 }
 
 .site-slogan {
@@ -33,7 +43,10 @@
 
     &,
     &:visited {
-        color: $grey-color-dark;
+        color: #FFF;
+    }
+    @include media-query($on-palm) {
+      font-size: 12px;
     }
 }
 
