basics of almost each page done

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -170,6 +170,37 @@ pre {
     }
 }
 
+.wrapper-wrapper {
+  background-color: #e2e2e2;
+  padding-top: 45px;
+  margin-top: 25px;
+  padding-bottom: 35px;
+}
+
+.wrapper-gray {
+  background-color: #e2e2e2;
+  padding-top: 45px;
+  padding-bottom: 35px;
+}
+
+.wrapper-blue {
+  background-color: #90B6E5;
+  padding-top: 45px;
+  padding-bottom: 35px;
+}
+
+.wrapper-tan {
+  background-color: #EAD2AC;
+  padding-top: 45px;
+  padding-bottom: 35px;
+}
+
+.wrapper-blue2 {
+  background-color: #E0FBFC;
+  padding-top: 45px;
+  padding-bottom: 35px;
+}
+
 
 
 /**
