--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,14 +20,7 @@
       </a>
 
       <div class="trigger">
-          <a class="page-link" href="/deer_hunting/">Deer Hunting</a>
-          <a class="page-link" href="/elk_hunts/">Elk Hunts</a>
-          <a class="page-link" href="/pack_trips/">Pack Trips</a>
-          <a class="page-link" href="/snowmobiling/">Snowmobiling</a>
-          <a class="page-link" href="/trail_rides/">Trail Rides</a>
-      </div>
-      <div class="trigger">
-          <a class="page-link" href="/photo_gallery/">Photo Gallery</a>
+          <a class="page-link" href="/">Home</a>
           <a class="page-link" href="/dates_of_hunts/">Dates of Hunts</a>
           <a class="page-link" href="/hunting_gear/">Hunting Gear</a>
           <a class="page-link" href="/map/">Map</a>
