--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,11 +4,15 @@ layout: default
 <div class="post">
 
   <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
+    <div class="wrapper">
+      <h1 class="post-title">{{ page.title }}</h1>
+    </div>
   </header>
 
   <article class="post-content">
+    <div class="wrapper">
     {{ content }}
+    </div>
   </article>
 
 </div>
