--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -102,6 +102,14 @@ a {
     }
 }
 
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+tbody tr:nth-child(odd) {
+   background-color: #ccc;
+}
 
 
 /**
