change images path

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <div class="wrapper">
-    <a class="site-title" href="{{ site.baseurl }}/"><img src="/images/logo.png" /> {{ site.title }}</a><br>
+    <a class="site-title" href="{{ site.baseurl }}/"><img src="images/logo.png" /> {{ site.title }}</a><br>
 
     <div class="site-slogan">
       {{ site.slogan }}
