--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,13 +5,13 @@
     border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
     min-height: 400px;
-    background-image: url(../images/tetons.jpg);
+    background-image: url(/images/tetons.jpg);
     background-size: 100%;
     background-repeat: no-repeat;
     // Positioning context for the mobile navigation icon
     position: relative;
     @include media-query($on-palm) {
-      background-image: url(../images/tetons_small.jpg);
+      background-image: url(/images/tetons_small.jpg);
       min-height: 100px;
     }
 }
