adding base url to links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,12 +21,12 @@
 
       <div class="trigger">
           <a class="page-link" href="/">Home</a>
-          <a class="page-link" href="/dates_of_hunts/">Dates of Hunts</a>
-          <a class="page-link" href="/hunting_gear/">Hunting Gear</a>
-          <a class="page-link" href="/map/">Map</a>
-          <a class="page-link" href="/prices/">Prices</a>
-          <a class="page-link" href="/about/">About</a>
-          <a class="page-link" href="/contact_us/">Contact Us</a>
+          <a class="page-link" href="{{ site.baseurl }}dates_of_hunts/">Dates of Hunts</a>
+          <a class="page-link" href="{{ site.baseurl }}hunting_gear/">Hunting Gear</a>
+          <a class="page-link" href="{{ site.baseurl }}map/">Map</a>
+          <a class="page-link" href="{{ site.baseurl }}prices/">Prices</a>
+          <a class="page-link" href="{{ site.baseurl }}about/">About</a>
+          <a class="page-link" href="{{ site.baseurl }}contact_us/">Contact Us</a>
       </div>
     </nav>
 
