--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
       </a>
 
       <div class="trigger">
-          <a class="page-link" href="/">Home</a>
+          <a class="page-link" href="{{ site.baseurl }}">Home</a>
           <a class="page-link" href="{{ site.baseurl }}dates_of_hunts/">Dates of Hunts</a>
           <a class="page-link" href="{{ site.baseurl }}hunting_gear/">Hunting Gear</a>
           <a class="page-link" href="{{ site.baseurl }}map/">Map</a>
