--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading"><img src="images/logo.png" /> {{ site.title }}</h2>
+    <h2 class="footer-heading"><img src="{{ site.baseurl }}images/logo.png" /> {{ site.title }}</h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
