--- a/css/main.scss
+++ b/css/main.scss
@@ -10,8 +10,8 @@ $base-font-family: Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
-$tetons: '{{ site.baseurl }}/images/tetons.jpg';
-$sm-tetons: '{{ site.baseurl }}/images/tetons_small.jpg';
+$tetons: '{{ site.baseurl }}images/tetons.jpg';
+$sm-tetons: '{{ site.baseurl }}images/tetons_small.jpg';
 
 
 $spacing-unit:     30px;
