--- a/css/main.scss
+++ b/css/main.scss
@@ -51,5 +51,7 @@ $on-laptop:        800px;
 @import
         "base",
         "layout",
-        "syntax-highlighting"
+        "syntax-highlighting",
+        "gallery",
+        "photoswipe"
 ;
