try with absolute url

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,12 +21,12 @@
 
       <div class="trigger">
           <a class="page-link" href="/">Home</a>
-          <a class="page-link" href="/dates_of_hunts/">Dates of Hunts</a>
-          <a class="page-link" href="/hunting_gear/">Hunting Gear</a>
-          <a class="page-link" href="/map/">Map</a>
-          <a class="page-link" href="/prices/">Prices</a>
-          <a class="page-link" href="/about/">About</a>
-          <a class="page-link" href="/contact_us/">Contact Us</a>
+          <a class="page-link" href="{{ "dates_of_hunts/" | absolute_url }}">Dates of Hunts</a>
+          <a class="page-link" href="{{ "hunting_gear/" | absolute_url }}">Hunting Gear</a>
+          <a class="page-link" href="{{ "map/" | absolute_url }}">Map</a>
+          <a class="page-link" href="{{ "prices/" | absolute_url }}">Prices</a>
+          <a class="page-link" href="{{ "about/" | absolute_url }}">About</a>
+          <a class="page-link" href="{{ "contact_us" | absolute_url }}">Contact Us</a>
       </div>
     </nav>
 
