--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <div class="wrapper">
-    <a class="site-title" href="{{ site.baseurl }}"><img src="/images/logo.png" /> Robson Outfitters</a><br>
+    <a class="site-title" href="/"><img src="/images/logo.png" /> Robson Outfitters</a><br>
 
     <div class="site-slogan">
       {{ site.slogan }}
