new styling and link for photos

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,7 @@
       <div class="trigger">
           <a class="page-link" href="/">Home</a>
           <a class="page-link" href="{{ "dates_of_hunts/" | absolute_url }}">Dates of Hunts</a>
+          <a class="page-link" href="{{ "photo_gallery/" | absolute_url }}">Photos</a>
           <a class="page-link" href="{{ "hunting_gear/" | absolute_url }}">Hunting Gear</a>
           <a class="page-link" href="{{ "map/" | absolute_url }}">Map</a>
           <a class="page-link" href="{{ "prices/" | absolute_url }}">Prices</a>
