redirect to ssl

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,9 @@
 
   <link rel="stylesheet" href="{{ "../css/main.css" }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+  <script>
+    // Don't force https when serving the website locally
+    if (!(window.location.host.startsWith("localhost")) && (window.location.protocol != "https:"))
+        window.location.protocol = "https";
+  </script>
 </head>
